<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_world_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="johann123.js@gmail.com">ros2</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Other package dependencies -->
  <exec_depend>hello_world_cpp_pkg</exec_depend>
  <exec_depend>hello_world_py_pkg</exec_depend>
  <exec_depend>demo_nodes_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
